+{{rfc-header|Saying}} <jeudi#2668088>

--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -7,9 +7,10 @@
 ===Noun===
 '''jeudi''' ''m''
 
-#[[Thursday]], the fourth day of the [[week]] (according to the [[ISO]] 8601 standard).
+# [[Thursday]], the fourth day of the [[week]] (according to the [[ISO]] 8601 standard).
 
 ===Saying===
+{{rfc-header|Saying}}
 :''la semaine des quatre jeudis'' : never
 
 [[Category:fr:Days of the week]]
