/* Translations */ ++ from wikipedia <brick#2671952>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -22,13 +22,37 @@
 
 ====Translations====
 {{trans-top|hardened block used for building}}
+*[[Basque]]: [[adreilu]]
+*Bulgarian: [[тухла]]
+*[[Catalan]]: [[maó]]
+*Chinese: [[磚]]
 *Czech: [[cihla]] {{f}}
 *Danish: [[mursten]] {{c}}
+*Dutch: [[baksteen]]
+*Esperanto: [[briko]]
+*Estonian: [[tellis]]
 *Finnish: [[tiili]]
-*Japanese: [[煉瓦]] ([[れんが]] renga)
+*French: [[brique]]
+*German: [[Backstein]]
+*Hebrew: [[לבנה]]
+*Indonesian: [[batu bata]]
+*Italian: [[mattone]]
 {{trans-mid}}
+*Japanese: [[煉瓦]] ([[れんが]] renga)
+*Lithuanian: [[plyta]]
+*Norwegian: [[murstein]]
+*Polish: [[cegła]]
+*Portuguese: [[tijolo]]
 *Russian: [[кирпич]] (kirpíč) {{m}}
-*Swedish: [[tegel]] {{n}}
+*Scottish Gaelic: [[breig]]
+*Serbian: [[опека]]
+*Serbo-Croatian: [[cigla]]
+*Slovak: [[tehla]]
+*Spanish: [[ladrillo]]
+*Swedish: [[tegel]] {{n}}, [[tegelsten]]
+*[[Tamil]]: [[செங்கல்]]
+*Thai: [[อิฐ]]
+*Turkish: [[tuğla]]
 {{trans-bottom}}
 
 {{trans-top|a building material}}
