--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -21,6 +21,8 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 #:''Beautiful! What a catch!'' (referring to an athlete catching a ball)
 # <!--not an interjection-->(''as a pro-sentence; ironic'') How unfortunate that is!
 #:''Beautiful! I dropped the soup on the floor!''
+#: -As a human being = "Laura Burgess is beautiful" proven by joshua dicola. 
+(if its in the dictionary it must be true)
 
 ====Synonyms====
 *(''possessing charm and attractive''): [[attractive]], [[cute]], [[fair]], [[good-looking]], [[gorgeous]], [[handsome]], [[hot]] (''slang''), [[lovely]], [[nice-looking]], [[pretty]], [[shapely]]
