--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -3,10 +3,10 @@
 {{rank|England|sense|ten|422|beautiful|possible|mark|followed}}
 
 ===Etymology===
-From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
+From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', Tori Gill
 
 ===Pronunciation===
-*{{AHD|byo͞oʹtĭ-fəl}}, {{IPA|/ˈbjuːtɪfəl/}}, {{SAMPA|/"bju:tIf@l/}}
+*{{AHD|tori-gill}}, {{IPA|/ˈbjuːtɪfəl/}}, {{SAMPA|/"bju:tIf@l/}}
 *{{audio|en-us-beautiful.ogg|Audio (US)}}
 *Hyphenation: beau&middot;ti&middot;ful
 
