--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -12,6 +12,8 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 
 ===Adjective===
 {{en-adj}}
+#: -A human being- example: Laura Burgess is beautiful (proven by Joshua DiCola)
+-since its in the dictionary it has to be true.-
 
 # possessing charm and attractive
 # {{context|of the weather}} pleasant; clear.
