/* Translations */ +jp <vomit#2684926>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -26,6 +26,7 @@ See [[WikiSaurus:vomit]]
 *Greek: εμετός
 *Hebrew: [[להקיא]]
 *Italian: [[vomitare]], [[rimettere]]
+*Japanese: [[吐く]] ([[はく]], haku), [[嘔吐する]] ([[おうとする]], ōtosuru)
 {{mid}}
 *Korean: [[게우다]] (geuda)<!--, [[토하다]] ([[吐]]-, to-hada)-->
 *Maltese: [[irrimetta]] {{m}}, [[irrimettat]] {{f}}, [[qala']] {{m}}, [[qalgħat]] {{f}}
