/* Etymology */ template <creep#2685000>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Old English ''[[crēopan]]''
+{{OE.}} ''[[crēopan]]''
 
 ===Pronunciation===
 * {{AHD|/krēp/}}, {{IPA|/kriːp/}}, {{SAMPA|/kri:p/}}
