/* Translations */ +Czech <play#2686642>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -28,6 +28,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 *Arabic: [[لعبة]] {{f}}
 *Catalan: [[joc]] {{m}}
 *Croatian: [[igra]] {{f}}
+*Czech: [[hra]] {{f}}
 *Danish: leg, spil
 *Dutch: [[spel]]
 *Esperanto: [[ludo]]
