--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -56,6 +56,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 *Arabic: {{ARchar|[[مسرح]]}} {{m}} (masraħ)
 *Catalan: [[obra]] {{f}}
 *Chinese: [[戏剧]], [[戲劇]]
+*Czech: [[hra]] {{f}}
 *Danish: stykke, spil
 *Dutch: [[optreden]] {{n}}, [[schouwspel]] {{n}}, [[toneelstuk]] {{n}}, [[stuk]] {{n}}
 *Ewe: [[fefe]] {{n}}
