--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -38,6 +38,7 @@ From {{OF.}} ''[[branche]]''.
 *Portuguese: [[galho]] {{m}}
 *Romanian: [[ram]] {{n}}, [[ramură]] {{f}}
 *Russian: [[ветвь]] {{f}}, [[ветка]] {{f}}
+*Serbian: [[grana]] {{f}}, [[vejka]] {{f}} (leafless branch)
 *Slovene: [[veja]] {{f}}
 *[[Telugu]]: [[కొమ్మ]], [[శాఖ]]
 *Turkish: [[dal]]
@@ -52,6 +53,7 @@ From {{OF.}} ''[[branche]]''.
 {{trans-mid}}
 *Hebrew: [[ענף]] (anaf) {{m}}
 *Portuguese: [[ramo]] {{m}}
+*Serbian: [[grana]] {{f}}, [[vejka]] {{f}} (leafless branch)
 *Slovene: [[veja]] {{f}}
 *Turkish: [[dal]]
 {{trans-bottom}}
