--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -13,7 +13,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 ===Adjective===
 {{en-adj}}
 
-# amelia thorne
+# AmieJo Buckland
 # {{context|of the weather}} pleasant; clear.
 # well executed
 #:''The skater performed a beautiful [[axel]].''
