--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -60,6 +60,7 @@ From {{L.}} ''[[curvus]]''.
 *Finnish: [[kaarre]]
 {{trans-mid}}
 *French: [[courbe]] {{f}}
+*Hebrew: {{he-translation|עקימה|akimah}} {{f}}
 *Italian: [[curva]] {{f}}
 *Swedish: [[kurva]] {{c}}
 *Russian: [[изгиб]] {{m}}, [[кривая]] {{f}}, [[поворот]] {{m}}
