--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -60,6 +60,7 @@
 [[el:Czech Republic]]
 [[fr:Czech Republic]]
 [[io:Czech Republic]]
+[[id:Czech Republic]]
 [[hu:Czech Republic]]
 [[nds:Czech Republic]]
 [[pl:Czech Republic]]
