robot  Adding: [[fr:масленица]] <масленица#2714917>

--- a/en/м/масленица.11176.wikitext
+++ b/en/м/масленица.11176.wikitext
@@ -25,4 +25,5 @@ Derived from [[масло]] ('butter', 'oil'). Cf. French [[mardi gras]].
 
 [[Category:Russian nouns]]
 
+[[fr:масленица]]
 [[vi:масленица]]
