--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -1,56 +1,55 @@
+{{wikipedia}}
 {{see|Ísrael|Israël|İsrael}}
 ==English==
-{{wikipedia}}
 
 ===Pronunciation===
-*{{AHD|ĭz'rāəl, ĭz'rēəl}}
-*{{IPA|/ˈɪzreɪəl/, /ˈɪzriəl/}}
-*{{SAMPA|/"IzreI@l/, /"Izri@l/}}
+*{{AHD|ĭz'rāəl}} or {{AHDchar|ĭz'rēəl}}, {{IPA|/ˈɪzreɪəl/}} or {{IPAchar|/ˈɪzriəl/}}, {{SAMPA|/"IzreI@l/}} or {{SAMPAchar|/"Izri@l/}}
 
 ===Etymology===
-Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[Wikipedia:Hebrew Bible|Hebrew Bible]], where [[Jacob]] is renamed Israel after wrestling with a mysterious adversary. This adversary was "a man", and later "God" according to [[Wikipedia: Genesis (Old Testament)|Genesis]] 32:24–30; or "the angel of Esau", according to [[Wikipedia:Book of Hosea|Hosea]] 12:4. The biblical nation fathered by Jacob was then called "The Children of Israel" or the "Israelites". Citizens of the modern State of Israel are referred to, in English, as "Israelis".
-
-*{{RQ:Authorized Version|Genesis|32|28}}
-*:And he said, Thy name shall be called no more Jacob, but '''Israel''': for as a prince hast thou power with God and with men, and hast prevailed.
-* '''2006:''' [http://www.scripture4all.org/OnlineInterlinear/OTpdf/gen32.pdf an interlinear, literal translation of Genesis 32:28]
-*:And-he-is-saying not Jacob he-shall-be-said further name-of-you but rather '''Israel''' that you-are-upright with Elohim and with mortals and-you-are-prevailing. (''Thus one literal translation of [[ישראל]], Israel, is "Upright [with] God"; [ישר־אל Ishr-al]'')
+Originally from {{He.}} ''[[ישראל]]'', the name "Israel" is rooted in the [[w:Hebrew Bible|Hebrew Bible]], where [[Jacob]] is renamed Israel after wrestling with a mysterious adversary. This adversary was "a man", and later "God" according to [[w:Genesis (Old Testament)|Genesis]] 32:24–30; or "the angel of Esau", according to [[w:Book of Hosea|Hosea]] 12:4. The biblical nation fathered by Jacob was then called "The Children of Israel" or the "Israelites". Citizens of the modern State of Israel are referred to, in English, as "Israelis".
 
 ===Proper noun===
 {{en-proper noun}}
 
 # The modern nation in the [[Middle East]], located at eastern [[shore]] of the [[Mediterranean]]. Official name: State of Israel.
 # The ancient nation occupying approximately the same area, especially under the united monarchy of Saul, David and Solomon.
-# (''Biblical'') A name given to [[Jacob]] (Genesis 32:28).
+# {{context|biblical}} A name given to [[Jacob]] (Genesis 32:28).
+#*{{RQ:Authorized Version|Genesis|32|28}}
+#*: ''And he said, Thy name shall be called no more Jacob, but '''Israel''': for as a prince hast thou power with God and with men, and hast prevailed.''
+#* '''2006:''' [http://www.scripture4all.org/OnlineInterlinear/OTpdf/gen32.pdf an interlinear, literal translation of Genesis 32:28]
+#*: ''And-he-is-saying not Jacob he-shall-be-said further name-of-you but rather '''Israel''' that you-are-upright with Elohim and with mortals and-you-are-prevailing.'' (Thus one literal translation of [[ישראל]], Israel, is "Upright [with] God"; [ישר־אל Ishr-al].)
 # {{given name|male}}.
 
-{{rfc-level|Translations at L3+}}
+====Derived terms====
+*[[Israeli]]
+*[[Israelite]]
 
-===Translations===
+====Translations====
 {{trans-top|the nation}}
 *Albanian: [[Izraeli]]
 *Arabic: {{ARchar|[[إسرائيل]]}} (’isra’íl)
 *Armenian: [[Իսրայել]] (Israyel)
 *Belarusian: [[Ізраіль]] {{m}}
 *Bosnian: [[Izrael]] {{m}}
-*Breton: Israel
+*Breton: {{t|br|Israel}}
 *Bulgarian: [[Израел]] (Izrael) {{m}}
-*Catalan: Israel {{m}}
+*Catalan: {{t|ca|Israel|m}}
 *Chinese: [[以色列]] (Yǐsèliè)
 *Croatian: [[Izrael]] {{m}}
 *Czech: [[Izrael]]
-*Danish: Israel
-*Dutch: [[Israël]]
+*Danish: {{t|da|Israel}}
+*Dutch: {{t|nl|Israël}}
 *Esperanto: [[Israelo]]
 *Estonian: [[Iisrael]]
-*Finnish: Israel
+*Finnish: {{t|fi|Israel}}
 *French: [[Israël]]
-*German: Israel
+*German: {{t|de|Israel}}
 *Greek: [[Ισραήλ]] (israíl) {{n}}
 *Hebrew: [[ישראל|יִשְׂרָאֵל]] (Yiśra'ēl)
 *Hungarian: [[Izrael]]
 *Icelandic: [[Ísrael]]
-*Indonesian: Israel
-*Interlingua: Israel
+*Indonesian: {{t|in|Israel}}
+*Interlingua: {{t|ia|Israel}}
 *Italian: [[Israele]]
 {{trans-mid}}
 *Japanese: [[イスラエル]] (isuraeru)
@@ -58,33 +57,28 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 *Macedonian: [[Израел]] {{m}}
 *Maltese: [[Iżrael]]
 *Marathi: [[इस्रायल]] (isrāyal)
-*Norwegian: [[#Norwegian|Israel]]
+*Norwegian: {{t|no|Israel}}
 *[[Old Slavonic]]: [[Їздраил҄ь]]
 *Persian: {{FAchar|[[اسرائیل]]}} (Esrâ’il)
 *Polish: [[Izrael]]
-*Portuguese: Israel
+*Portuguese: {{t|pt|Israel}}
 *[[Pushto]]: {{PSchar|[[اسرايل]]}}
-*Romanian: Israel {{n}}
+*Romanian: {{t|ro|Israel|n}}
 *Russian: [[Израиль]] (Izráil’) {{m}}
 *Serbian:
 *:Cyrillic: [[Израел]] {{m}}
 *:Roman: [[Izrael]] {{m}}
 *Slovene: [[Izrael]] {{m}}
-*Spanish: Israel
-*Swedish: Israel
-*Tatar: [[İsrael#Tatar|İsrael]]
+*Spanish: {{t|es|Israel}}
+*Swedish: {{t|sv|Israel}}
+*Tatar: {{t|tt|İsrael}}
 *Turkish: [[İsrail]]
 *Ukrainian: [[Ізраїль]] (Izrajil’) {{m}}
 *Urdu: {{URchar|[[اسرائیل]]}}
 {{trans-bottom}}
 
-===Related terms===
-*[[Israeli]]
-*[[Israelite]]
-
 ===See also===
 *[[Countries of the world]]
-*[[w:Israel|Wikipedia article on Israel]]
 *[[Irving]]
 
 [[Category:Countries]]
@@ -98,7 +92,7 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 
 # [[#English|Israel]]
 
-====See also====
+====Derived terms====
 *[[israeler]]
 *[[israelsk]]
 
@@ -111,7 +105,7 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 ===Proper noun===
 '''Israel'''
 
-# Israel
+# [[#English|Israel]]
 
 [[Category:sv:Countries]]
 
