/* Transitive verb */ {{wikipedia|Brick (electronics)}} <brick#2719942>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -144,6 +144,7 @@
 ===Transitive verb===
 {{rfc-trverb|Transitive verb}}
 {{en-verb}}
+{{wikipedia|Brick (electronics)}}
 
 # To make an electronic device nonfunctional, rendering it as useful as a brick.
 #:''My VCR was '''bricked''' during the lightning storm''.
