--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -140,6 +140,7 @@ Old English ''[[pleġian]]''
 *German: [[spielen]]
 *Hebrew: [[לשחק]] (l'sāḥeq), [[להשתעשע]] (l'hishtāʿāsheʿā)
 *Hungarian: [[játszik]]
+*Icelandic: [[leika]], [[leika sér]]
 *Italian: [[giocare]]
 {{trans-mid}}
 *Japanese: [[遊ぶ]] (asobu)
@@ -167,6 +168,7 @@ Old English ''[[pleġian]]''
 *Finnish: [[soittaa]]
 *French: [[jouer]] de
 *Hebrew: [[לנגן]] ב- (l'nāgen b'-)
+*Icelandic: [[spila]], [[spila á]] (+ {{dat}})
 {{trans-mid}}
 *Italian: [[suonare]]
 *Old English: [[lacan|lācan]]
@@ -186,6 +188,7 @@ Old English ''[[pleġian]]''
 *Finnish: [[soittaa]]
 *French: [[jouer]]
 *German: [[spielen]]
+*Icelandic: [[spila]]
 *Japanese: [[演奏]]する (ensō suru)
 *Hebrew: [[לנגן]] (l'nāgen)
 {{mid}}
@@ -199,6 +202,7 @@ Old English ''[[pleġian]]''
 {{bottom}}
 
 {{trans-top|deal with a situation in a diplomatic manner}}
+*Icelandic: [[spila]]
 *Polish: [[grać]]
 {{trans-mid}}
 {{trans-bottom}}
@@ -211,6 +215,7 @@ Old English ''[[pleġian]]''
 *Finnish: [[näytellä]]
 *German: [[spielen]]
 *Hebrew: [[לשחק]] (l'sāḥeq)
+*Icelandic: [[leika]]
 {{trans-mid}}
 <!--Put translations for languages from A to Z here-->
 *Polish: [[grać]], [[występować]]
@@ -228,6 +233,7 @@ Old English ''[[pleġian]]''
 *Dutch: [[spelen]], [[meespelen]]
 *Finnish: [[pelata]]
 *French: [[jouer]] à
+*Icelandic: [[spila]], [[leika]]
 {{trans-mid}}
 *Polish: [[grać]] w
 *Portuguese: [[jogar]]
@@ -244,6 +250,7 @@ Old English ''[[pleġian]]''
 *Finnish: [[toistaa]]
 *French: [[jouer]]
 *Hebrew: [[להשמיע]] (l'hāshmiʿā)
+*Icelandic: [[spila]]
 {{trans-mid}}
 *Polish: [[grać]], [[odtwarzać]]
 *Portuguese: [[gravar]]
