fmt; more der <fight#2752709>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -3,10 +3,9 @@
 {{rank|per|result|formed|763|fight|agree|sit|considerable}}
 
 ===Pronunciation===
-*{{IPA|/faɪt/}}
-*{{AHD|fīt}}, {{SAMPA|/faIt/}}
+*{{enPR|fīt}}, {{IPA|/faɪt/}}, {{SAMPA|/faIt/}}
 *{{audio|en-us-fight.ogg|Audio (US)}}
-*Rhymes: [[Rhymes:English:-aɪt|-aɪt]]
+*{{rhymes|aɪt}}
 
 [[Image:Adriaen Brouwer 001.jpg|thumb|Fight ([[brawl]])]]
 
@@ -23,10 +22,17 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 #* ''He '''fought''' for the Democrats in the last election.''
 # {{transitive}} To conduct or engage in (battle, warfare etc.).
 #* ''The battle was '''fought''' just over that hill.''
-# {{transitive}} To engage in combat; to oppose physically, to contest with.
+# {{transitive}} To engage in combat with; to oppose physically, to contest with.
 #* ''My grandfather '''fought''' the Nazis in the Second World War.''
 # {{transitive}} To [[try]] to [[overpower]]; to [[fiercely]] [[counteract]].
 #* ''The government pledged to '''fight''' corruption.''
+
+=====Derived terms=====
+{{rel-top|Terms derived from the verb ''to fight''}}
+*[[fight fire with fire]]
+{{rel-mid}}
+*[[fight shy of]]
+{{rel-bottom}}
 
 =====Translations=====
 {{trans-top|to be involved in physical confrontation}}
@@ -106,7 +112,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 {{trans-bottom}}
 
 ===Etymology 2===
-From {{OE.}} ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]'', German ''[[Gefecht]]''.
+From {{OE.}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'', German ''[[Gefecht]]''.
 
 ====Noun====
 {{en-noun}}
@@ -124,14 +130,26 @@ From {{OE.}} ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]
 #* ''As soon as he saw the size of his opponent, all the '''fight''' went out of him.''
 
 =====Derived terms=====
-{{top2}}
+{{rel-top|Terms derived from the noun ''fight''}}
+*[[bullfight]]
+*[[bun fight]]
 *[[cockfight]]
 *[[dogfight]]
-{{mid2}}
 *[[fight or flight]]
 *[[fighter]]
-*[[fighting cock]]
-{{bottom2}}
+*[[fighting]]<!--adjective and noun; whence *[[fighting cock]], etc-->
+*[[fight scene]]
+*[[fist fight]]
+{{rel-mid}}
+*[[food fight]]
+*[[footfight]]
+*[[gunfight]]
+*[[pillow fight]]
+*[[prize fight]]
+*[[straight fight]]
+*[[sword fight]]
+*[[thumb fight]]
+{{rel-bottom}}
 
 =====Translations=====
 {{trans-top|occasion of fighting}}
@@ -218,6 +236,7 @@ From {{OE.}} ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]
 *Portuguese: [[combatividade]] {{f}}
 {{trans-bottom}}
 
+======Translations to be checked=====
 {{checktrans}}
 {{trans-top|Translations to be checked}}
 *{{ttbc|Spanish}}: [[lucha]] {{f}}, [[riña]]
