/* =Translations to be checked */ <fight#2752710>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -236,7 +236,7 @@ From {{OE.}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'
 *Portuguese: [[combatividade]] {{f}}
 {{trans-bottom}}
 
-======Translations to be checked=====
+======Translations to be checked======
 {{checktrans}}
 {{trans-top|Translations to be checked}}
 *{{ttbc|Spanish}}: [[lucha]] {{f}}, [[riña]]
