/* Translations */  +PL <choose#2764157>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -32,6 +32,7 @@ From Old English [[ceosan|ċēosan]].
 *German: [[wählen]]
 {{mid}}
 *Italian: [[eleggere]]
+*Polish: [[wybierać]], [[wybrać]]
 *Portuguese: [[escolher]]
 *Slovene: [[izvoliti]]
 *Spanish: [[elegir]]
