--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -21,12 +21,12 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 =====Translations=====
 {{trans-top|an enclosed area}}
+*Dutch: [[ren]]
 *French: [[enclos]] {{m}}
 *German: [[Pferch]] {{m}}
 *Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, {{italbrac|for sheep}} [[ovile]] {{m}}
-*Norwegian: [[innhegning]] {{f}}/{{m}}, [[kve]] {{n}}
 {{trans-mid}}
-*Dutch: [[omheining]], (for livestock: [[ren]])
+*Norwegian: [[innhegning]] {{mf}}, [[kve]] {{n}}
 *Russian: {{t|ru|загон|m}} (zagón)
 *Spanish: [[corral]] {{m}}
 {{trans-bottom}}
