--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -21,7 +21,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 =====Translations=====
 {{trans-top|an enclosed area}}
-*Dutch: [[ren]]
+*Dutch: [[omheining]] {{f}}, [[ren]] {{m}}
 *French: [[enclos]] {{m}}
 *German: [[Pferch]] {{m}}
 *Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, {{italbrac|for sheep}} [[ovile]] {{m}}
