--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -13,7 +13,7 @@
 From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate with Dutch ''[[vechten]]'', German ''[[fechten]]''.
 
 ====Verb====
-{{en-verb|fights|fighting|fought|'''[[fought]]''' ''or (archaic)'' '''[[foughten]]'''}}[[Category:English irregular verbs]]
+{{en-verb|fights|fighting|fought|'''[[fought]]''' ''or (archaic)'' '''[[foughten]]'''}}
 
 # {{intransitive}} To [[contend]] in physical conflict, either singly or in war, battle etc.
 #* ''The two boxers have been '''fighting''' for more than half an hour.''
@@ -154,7 +154,7 @@ From {{OE.}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'
 =====Translations=====
 {{trans-top|occasion of fighting}}
 *Albanian: [[luftë]] {{f}}
-*Catalan: [[lluita]] {{f}}, [[combat]] {{m}}
+*[[Catalan]]: [[lluita]] {{f}}, [[combat]] {{m}}
 *Czech: [[boj]] {{m}}
 *Danish: [[kamp]]
 *Dutch: [[gevecht]] {{n}}
@@ -246,6 +246,7 @@ From {{OE.}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'
 {{trans-bottom}}
 
 [[Category:1000 English basic words]]
+[[Category:English irregular verbs]]
 
 [[ar:fight]]
 [[de:fight]]
