/* Translations */ <United States of America#2768611>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -49,7 +49,7 @@
 {{mid}}
 *Kirghiz: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
 *Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
-*Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Unitae Americae]]
+*Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Foederatae Americae]]
 *Latvian: [[Amerikas Savienotās Valstis]], [[ASV]]
 *Malay: [[Amerika Syarikat]]
 *Maltese: [[Stati Uniti ta' l-Amerika]], [[l-Istati Uniti ta' l-Amerika]], (''short form'') [[Stati Uniti]], [[l-Istati Uniti]], [[USA]]
