--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -35,6 +35,7 @@
 *German: [[Magen]] {{m}}
 *Greek: [[στομάχι]] (stomáçi) {{n}}, [[στόμαχος]] (stómakhos) {{m}}, [[γαστήρ]] (ɣastír) {{m}}
 *Hebrew: [[קיבה]] {{f}}
+*Hindi: [[अमाशय]] {{m}}
 *Hungarian: [[gyomor]]
 *Icelandic: [[magi]] {{m}}
 {{trans-mid}}
@@ -59,6 +60,7 @@
 {{trans-top|belly}}
 *German: [[Bauch]] {{m}}
 *Hebrew: [[בטן]] {{f}}
+*Hindi: [[पेट]] (pēṭa) {{m}}
 {{trans-mid}}
 *Italian: [[pancia]] {{f}}
 *Kurdish: {{KUchar|[[زگ]]}}
