--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -58,14 +58,25 @@
 {{trans-bottom}}
 
 {{trans-top|belly}}
+*Chinese: {{zh-ts|腹部|腹部}} (fùbù)
+*Czech: [[břicho]] {{n}}
+*Dutch: [[buik]]
+*Finnish: [[maha]]
+*French: [[bedon]] {{m}}, [[ventre]] {{m}}
 *German: [[Bauch]] {{m}}
 *Hebrew: [[בטן]] {{f}}
 *Hindi: [[पेट]] (pēṭa) {{m}}
+*Hungarian: [[has#Hungarian|has]]
 {{trans-mid}}
 *Italian: [[pancia]] {{f}}
+*Japanese: [[腹]] ([[はら]], hara)
+*Korean: [[배]] (bae)
 *Kurdish: {{KUchar|[[زگ]]}}
 *Maltese: [[żaqq]] {{f}}
+*Portuguese: [[barriga#Portuguese|barriga]] {{f}}
 *Russian: [[живот]] (živót) {{m}}
+*Spanish: [[barriga#Spanish|barriga]] {{f}}, [[vientre]] {{m}}
+*Swedish: [[buk#Swedish|buk]], [[mage#Swedish|mage]] {{c}}
 {{trans-bottom}}
 
 ===Transitive verb===
