--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -1,12 +1,13 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2224<sub>4</sub>|canj=人竹木女 (OHDV)}}
 <!-- Order Changed,  -->
+
 # [[Japan]]
 # [[Japanese]]
-# [[docile]]<!-- See talk and http://www.kangxizidian.com/kangxi/0109.gif --> 
+# [[docile]]<!-- See talk and http://www.kangxizidian.com/kangxi/0109.gif -->
 # [[dwarf]], [[short]]<!-- Please show the example  to ferret out a reasonable explanation in literature　and history books -->
-
 
 ====References====
 {{Han ref|kx=0109.060|dkj=00796|dj=0232.040|hdz=10179.080|uh=502D|ud=20525|bh=ADD8|bd=44504}}
@@ -14,38 +15,51 @@
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wo1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
 {{ja-readings|on=[[い]] (i) < [[ゐ]] (wi), [[わ]] (wa)|kun=[[したがう]] (shitagau), [[やまと]] (yamato)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[위]], [[왜]] (< Middle Korean 와)|eumhun=왜나라|rv=wi, wae (< wa)|mr=wi, wae (< wa)}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Adjective===
 {{cmn-adj|ts|pin=wēi|pint=wei1|rs=人08}}
 
-# (''archaic'') obedient
-# (''archaic'') winding; meandering
+# {{archaic|lang=cmn}} obedient
+# {{archaic|lang=cmn}} winding; meandering
 
 {{cmn-adj|ts|pin=wǒ|pint=wo3|rs=人08}}
 
-# (''archaic'') describes a hairstyle for women that was popular during the [[w:Han Dynasty|Han Dynasty]] in which the hair was gathered up in a lopsided bun.
+# {{archaic|lang=cmn}} describes a hairstyle for women that was popular during the [[w:Han Dynasty|Han Dynasty]] in which the hair was gathered up in a lopsided bun.
 
 ===Noun===
 {{cmn-noun|ts|pin=wō|pint=wo1|rs=人08}}
 
-# (''archaic'') Japanese people; Japan
+# {{archaic|lang=cmn}} Japanese people; Japan
 
 [[de:倭]]
 [[fr:倭]]
