/* See also */ <Germany#2789547>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -84,15 +84,37 @@
 {{trans-bottom}}
 
 ===See also===
-*[[German]]
+*[[German]], [[Germanic]]
 *[[German language]]
 *[[German Empire]]
+*[[Dutch]]
+*[[Duits]]
+*[[Diets]]
+*[[Dietsch]]
+*[[Deutsch]]
+*[[Deutschland]]
+*[[Tyskland]]
+*[[Teuton]], [[Teutonic]]
+*[[Goth]]
+*[[Hun]]
+*[[Vandal]]
 *[[West Germany]]
 *[[East Germany]]
 *[[German Democratic Republic]]
 *[[Weimar Republic]]
-*[[Third Reich]]
+*[[Reich]], [[Riik]], [[Rick]], [[Rich]], [[Rijk]], [[Rike]], [[Rik]]
 *[[Prussia]]
+*[[Silesia]]
+*[[Austria]]
+*[[Bavaria]]
+*[[Alsatia]]
+*[[Swabia]]
+*[[Tirol]]
+*[[Luxemburg]]
+*[[Luxembourg]]
+*[[Switzerland]]
+*[[Netherlands]]
+*[[Liechtenstein]]
 *[[Countries of the world]]
 
 [[Category:Countries]]
