--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 {{rank|week|stone|tree|781|cost|value|cast|speaking}}
-
+{{wikipedia}}
 ===Pronunciation===
 *(''[[Received Pronunciation|UK]]'') {{IPA|/kɒst/}}
 *(''[[General American|US]]'') {{IPA|/kɔst/}}
