-: +*: in trans <icon#2798231>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -35,8 +35,8 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 *Italian: [[icona]] {{f}}
 *Polish: [[ikona]] {{f}}
 *Serbian
-:Cyrillic: [[икона#Serbian|икона]] {{f}}
-:Latin: [[ikona#Serbian|ikona]] {{f}}
+*:Cyrillic: [[икона#Serbian|икона]] {{f}}
+*:Latin: [[ikona#Serbian|ikona]] {{f}}
 *Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
 {{trans-bottom}}
 
@@ -50,8 +50,8 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 {{trans-mid}}
 *Polish: [[ikona]] {{f}}
 *Serbian
-:Cyrillic: [[икона#Serbian|икона]] {{f}}
-:Latin: [[ikona#Serbian|ikona]] {{f}}
+*:Cyrillic: [[икона#Serbian|икона]] {{f}}
+*:Latin: [[ikona#Serbian|ikona]] {{f}}
 *Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
 {{trans-bottom}}
 
@@ -64,8 +64,8 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 {{trans-mid}}
 *Polish: [[ikona]] {{f}}, [[symbol]] {{m}}
 *Serbian
-:Cyrillic: [[икона#Serbian|икона]] {{f}}
-:Latin: [[ikona#Serbian|ikona]] {{f}}
+*:Cyrillic: [[икона#Serbian|икона]] {{f}}
+*:Latin: [[ikona#Serbian|ikona]] {{f}}
 *Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
 {{trans-bottom}}
 
@@ -78,8 +78,8 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 {{trans-mid}}
 *Polish: [[ikona]] {{f}}, [[ikonka]] {{f}}
 *Serbian
-:Cyrillic: [[икона#Serbian|икона]] {{f}}
-:Latin: [[ikona#Serbian|ikona]] {{f}}
+*:Cyrillic: [[икона#Serbian|икона]] {{f}}
+*:Latin: [[ikona#Serbian|ikona]] {{f}}
 *Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
 {{trans-bottom}}
 
