--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -1,13 +1,15 @@
-[[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]]
+{{wikipedia|dab=Bridge (disambiguation)|Bridge}}
 ==English==
 
 ===Pronunciation===
+{{wikipedia}}
 *{{IPA|/brɪdʒ/}}
 *{{audio|en-us-bridge.ogg|Audio (US)}}
 *{{rhymes|ɪdʒ}}
 
 ===Etymology 1===
-# Old English ''[[brycġ]]''
+[[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]]
+{{OE.}} ''[[brycġ]]''
 
 ====Noun====
 {{en-noun}}
@@ -184,7 +186,7 @@
 {{trans-bottom}}
 
 ===Etymology 3===
-Old English ''[[brycġian]]''
+{{OE.}} ''[[brycġian]]''
 
 ====Verb====
 {{en-verb|bridg|ing}}
