--- a/en/м/масленица.11176.wikitext
+++ b/en/м/масленица.11176.wikitext
@@ -17,11 +17,11 @@ Derived from [[масло]] ('butter', 'oil'). Cf. French [[mardi gras]].
 
 # [[Shrovetide]], Pancake week (the week before Lent, seven weeks before Easter) 
 # [[feast]]
+#:*не [[житьё]], а масленица — ''a [[bed of roses]]; living [[high on the hog]]''
+#:*не всё коту масленица, придёт и [[великий пост]] — ''good things don’t last forever (after dinner comes the reckoning)''
 
-====Idioms====
-*не [[житьё]], а масленица — ''a [[bed of roses]]; living [[high on the hog]]''
-
-*не всё коту масленица, придёт и [[великий пост]] — ''good things don’t last forever (after dinner comes the reckoning)''
+====Declension====
+{{ru-noun1|ма́сленица|ма́сленицы|ма́сленицы|ма́слениц|ма́сленице|ма́сленицам|ма́сленицу|ма́сленицы|ма́сленицей,<br/>ма́сленицею|ма́сленицами|о ма́сленице|о ма́сленицах}}
 
 [[Category:Russian nouns]]
 
