trans link [[Catalan]] <curve#2805048>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -56,7 +56,7 @@ From {{L.}} ''[[curvus]]''.
 
 ====Translations====
 {{trans-top|gentle bend}}
-*Catalan: revolt, {{m}}
+*[[Catalan]]: revolt, {{m}}
 *Dutch: [[curve]] {{f}}, [[kromming]] {{f}}, [[bocht]] {{m}} (''road'')
 *Esperanto: [[kurbo]], [[kurbiĝo]], [[sinuo]], [[ĝirejo]], [[vojturno]] (''road'')
 *Finnish: [[kaarre]]
@@ -70,7 +70,7 @@ From {{L.}} ''[[curvus]]''.
 {{trans-bottom}}
 
 {{trans-top|geometry: one-dimensional figure}}
-*Catalan: corba, f
+*[[Catalan]]: corba, f
 *Dutch: [[curve]] {{f}}, [[kromme]] {{f}}
 *Esperanto: [[kurbo]]
 *Finnish: [[kaari]], [[käyrä]]
@@ -89,7 +89,7 @@ From {{L.}} ''[[curvus]]''.
 '''informal: attractive shape of a woman's body'''
 <!--Note: put INFORMAL translations in this table, where these exist-->
 {{top}}
-*Catalan: corbes, {{f}}, ''pl''
+*[[Catalan]]: corbes, {{f}}, ''pl''
 *Dutch: [[rondingen]] ''m, pl'', [[figuur]] {{f}}
 *Finnish: [[kurvi]] (''usually in plural'' kurvit),
 {{mid}}
