--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -48,6 +48,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 *Hebrew: [[לימצו]] (limtzo)
 {{trans-mid}}
 *Japanese: [[発見]]する (はっけんする, hakken-suru), [[見つける]](みつける,mitsukeru)
+*Kurdish: {{KUchar|[[دیتنه‌وه‌]]}}, {{KUchar|[[دۆزینه‌وه‌]]}}
 *Latin: [[invenire|invenīre]]
 *Latvian: [[atrast]]
 *Lithuanian: [[surasti]]
