{{en-noun}} <zenith#2816968>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -2,14 +2,13 @@
 ==English==
 
 ===Etymology===
-From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'' instead of ''zemt''.
+From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'' instead of ''[[zemt]]''.
 
-====Pronunciation====
-{{rfc-level|Pronunciation at L4+ not in L3 POS section}}
+===Pronunciation===
 * {{IPA|/'zen.iθ/}}
 
 ===Noun===
-'''zenith'''
+{{en-noun}}
 
 # {{astronomy}}
 #* The [[point]] in the [[celestial sphere]] opposite the [[nadir]].
@@ -49,8 +48,6 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 *{{ttbc|Italian}}: [[zenit]] {{m}}
 *{{ttbc|Japanese}}: [[絶頂]], [[頂点]]; [[天頂]] (astronomy)
 *{{ttbc|Spanish}}: [[cenit]] {{m}}, [[zenit]] {{m}}, [[auge]] {{m}}
-
-[[Category:English nouns that lack inflection template]]
 
 [[fa:zenith]]
 [[fr:zenith]]
