--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -13,9 +13,9 @@
 '''cut'''
 
 # (''participial adjective'') Having been cut.
-# Of a gem, [[carve]]d into a [[shape]]; not [[raw]].
+# {{context|of a gem}} [[carve]]d into a [[shape]]; not [[raw]].
 # {{colloquial}} [[circumcised|Circumcised]].
-# {{Cricket}} (''of a shot'') Played with a [[horizontal]] [[bat]] to hit the ball backward of point.
+# {{context|cricket|of a shot}} Played with a [[horizontal]] [[bat]] to hit the ball backward of point.
 # {{bodybuilding}} Having muscular [[definition]] in which individual groups of [[muscle]] fibers stand out among larger muscles.
 
 ====Translations====
