trans link [[Catalan]], trans link [[Malayalam]], trans link [[Telugu]] <play#2818954>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -27,7 +27,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-top|playful activity}}
 *Albanian: [[lojë]] {{f}}
 *Arabic: [[لعبة]] {{f}}
-*Catalan: [[joc]] {{m}}
+*[[Catalan]]: [[joc]] {{m}}
 *Croatian: [[igra]] {{f}}
 *Czech: [[hra]] {{f}}
 *Danish: leg, spil
@@ -43,7 +43,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 *Italian: [[gioco]] {{m}}
 *[[Kurdish]]: [[yarî]] {{f}}, [[lîstik]] {{f}}
 *Latin: [[ludus]] {{m}}
-*Malayalam: [[കളി]] (kaLi)
+*[[Malayalam]]: [[കളി]] (kaLi)
 *Norwegian: [[spill]]
 *Polish: [[zabawa]] (zabava)
 *Portuguese: [[jogo]] {{m}}
@@ -55,7 +55,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 
 {{trans-top|theatrical performance}}
 *Arabic: {{ARchar|[[مسرح]]}} {{m}} (masraħ)
-*Catalan: [[obra]] {{f}}
+*[[Catalan]]: [[obra]] {{f}}
 *Chinese: [[戏剧]], [[戲劇]]
 *Czech: [[hra]] {{f}}
 *Danish: stykke, spil
@@ -68,12 +68,12 @@ Old English ''[[pleġa]]'', ''plæġa''
 *Hebrew: [[משחק]] (misḥāq) {{m}}
 *Italian: [[dramma]] {{m}}
 *[[Kurdish]]: [[şano]] {{f}}, [[piyes]] {{f}}, [[tiyatro]] {{f}}
-*Malayalam: [[നാടകം]] (naatakam)
+*[[Malayalam]]: [[നാടകം]] (naatakam)
 *Polish: [[sztuka]] (shtooka)
 *Portuguese: [[peça]] [[teatral]] {{f}}
 *Slovene: [[igra]] {{f}}
 *Swedish: [[pjäs]] {{c}}
-*Telugu: [[నాటకం]] (naaTakaM)
+*[[Telugu]]: [[నాటకం]] (naaTakaM)
 {{trans-bottom}}
 
 {{trans-top|individual's performance in a sport}}
@@ -131,7 +131,7 @@ Old English ''[[pleġian]]''
 
 ====Translations====
 {{trans-top|act in a manner such that one has fun}}
-*Catalan: [[jugar]]
+*[[Catalan]]: [[jugar]]
 *Chinese: [[玩]] (wán)
 *Czech: [[hrát]] si
 *Dutch: [[spelen]]
@@ -154,11 +154,11 @@ Old English ''[[pleġian]]''
 *Slovene: [[igrati se]]
 *Spanish: [[jugar]]
 *Swedish: [[leka]]
-*Telugu: [[ఆడు]] (aaDu)
+*[[Telugu]]: [[ఆడు]] (aaDu)
 {{trans-bottom}}
 
 {{trans-top|produce music using a musical instrument ([[transitive]] sense), affecting a noun}}
-*Catalan: tocar
+*[[Catalan]]: tocar
 *Chinese:
 **[[弹]], [[彈]] (string instruments including piano)
 **[[吹]] (wind instruments)
@@ -181,7 +181,7 @@ Old English ''[[pleġian]]''
 {{trans-bottom}}
 
 {{trans-top|produce music using a musical instrument ([[intransitive]] sense, not affecting a noun)}}
-*Catalan: [[tocar]]
+*[[Catalan]]: [[tocar]]
 *Czech: [[hrát]]
 *Dutch: [[spelen]]
 *Finnish: [[soittaa]]
@@ -207,7 +207,7 @@ Old English ''[[pleġian]]''
 {{trans-bottom}}
 
 {{trans-top|act in a performance}}
-*Catalan: [[actuar]]
+*[[Catalan]]: [[actuar]]
 *Chinese: [[表演]]
 *Czech: [[hrát]]
 *Dutch: [[optreden]]
@@ -226,7 +226,7 @@ Old English ''[[pleġian]]''
 
 {{trans-top|participate in (a game)}}
 *Arabic: {{ARchar|[[لَعِبَ]]}} (laʕiba)
-*Catalan: participar, jugar
+*[[Catalan]]: participar, jugar
 *Chinese: [[玩]]
 *Czech: [[hrát]]
 *Dutch: [[spelen]], [[meespelen]]
