--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -7,6 +7,9 @@
 /{{IPAchar|ˈfɹɑːns}}/
 *:Rhymes: [[Rhymes:English:-ɑːns|-ɑːns]]
 
+===Etymology===
+From {{F.}} ''[[#French|France]]''.
+
 ===Proper noun===
 '''France'''
 
@@ -124,10 +127,13 @@
 ----
 
 ==French==
+===Etymology===
+From the [[Francs]], a people.
+
 ===Proper noun===
 '''France''' ''f''
 
-# France
+# [[#English|France]]
 
 ===Related terms===
 *[[français]]
