/* Translations */ *Nahuatl: [[tlatoa]] <speak#2830234>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -82,6 +82,7 @@
 {{trans-mid}}
 *Korean: [[말하다]] (malhada)
 *Latin: [[dicere]]
+*Nahuatl: [[tlatoa]]
 *Norwegian: {{t|no|snakke}}
 *[[Occitan]]: [[parlar]]
 *Polish: [[mówić]]
