--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -21,7 +21,7 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *Bosnian: [[Novi Zeland#Bosnian|Novi Zeland]] {{m}}
 *[[Breton]]: [[Zeland-Nevez]]
 *Bulgarian: [[Нова Зеландия]] (Nóva Zelándija) {{f}}
-*Chinese: [[新西蘭]]/[[新西兰]], [[紐西蘭]] (Xīn Xīlán)
+*Chinese: [[新西兰]] (Xīn Xīlán)
 *Croatian: [[Novi Zeland#Croatian|Novi Zeland]] {{m}}
 *Czech: [[Nový Zéland]] {{m}}
 *Danish: New Zealand
