--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -21,8 +21,9 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 #: ''Two righties are up in the '''pen'''.''
 
 =====Translations=====
-{{trans-top|an enclosed area}}
+{{trans-top|enclosed area for animals}}
 *Dutch: [[omheining]] {{f}}, [[ren]] {{m}}
+*Finnish: [[karsina]]
 *French: [[enclos]] {{m}}
 *German: [[Pferch]] {{m}}
 *Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, {{italbrac|for sheep}} [[ovile]] {{m}}
@@ -30,6 +31,11 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 *Norwegian: [[innhegning]] {{mf}}, [[kve]] {{n}}
 *Russian: {{t|ru|загон|m}} (zagón)
 *Spanish: [[corral]] {{m}}
+{{trans-bottom}}
+
+{{trans-top|prison cell}}
+*Finnish: [[selli]], [[häkki]]
+{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|(baseball) bullpen}}
