--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -49,6 +49,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 =====Translations=====
 {{trans-top|to enclose}}
+*Finnish: [[karsinoida]], [[sulkea]] [[selli|selliin]]/[[karsina|karsinaan]]
 *German: [[einsperren]]
 {{trans-mid}}
 *Norwegian: [[innhegne]]
@@ -82,13 +83,13 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 =====Translations=====
 {{trans-top|writing tool}}
 *Arabic: {{ARchar|[[قلم]]}} (qálam)
-*Dutch: pen {{f}}
-*Finnish: [[mustekynä]]
+*Dutch: '''pen''' {{f}}
+*Finnish: [[kynä]], [[mustekynä]]
 *French: [[stylo]] {{m}}
 *German: [[Stift]] {{m}}
 *Hebrew: [[עט|עֵט]] (et) {{m}}
 *Hungarian: [[toll]]
-*Indonesian: pen, [[pena]]
+*Indonesian: '''pen''', [[pena]]
 *Icelandic: [[penni]] {{m}}
 *Irish: [[peann]] {{m}}
 *Italian: [[penna#Italian|penna]] {{f}}
