/* Translations */ fi <pen#2839101>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -138,6 +138,7 @@ Origin uncertain.
 
 =====Translations=====
 {{trans-top|female swan}}
+*Finnish: [[naaras]][[joutsen]]
 *French: [[cygne]] [[femelle]] {{m}}
 *German: [[weiblicher]] [[Schwan]] {{m}}, [[Schwänin]] {{f}} (archaic)
 *Norwegian: [[hunnsvane]] {{m}}
