trans link [[Catalan]], trans link [[Frisian]], trans link [[Old Norse]] <beautiful#2842761>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -49,7 +49,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 *Arabic: {{ARchar|[[جميل]]}} (jamil)
 *[[Breton]]: [[brav]], [[kaer]]
 *Bulgarian: [[красив]], [[прекрасен]]
-*Catalan: [[bell]], [[formós]]
+*[[Catalan]]: [[bell]], [[formós]]
 *Chinese: [[漂亮]] (piàoliàng, piao4liang4), [[美]] (měi, meili, mei3li4)
 *Danish: [[smuk]] ''en'', [[smukt]] ''et'', [[smukke]] {{p}}
 *Dutch: [[mooi]]
@@ -60,7 +60,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 *Filipino: [[maganda]]
 *Finnish: [[kaunis]]
 *French: [[beau]] {{m}}, [[belle]] {{f}}
-*Frisian: [[moai]], [[kreas]]
+*[[Frisian]]: [[moai]], [[kreas]]
 *German: [[schön]]
 *Greek: {{t|el|ωραίος|m|}} (oraíos), {{t|el|όμορφος|m|}} (ómorfos)
 *Hebrew: [[יפה]] (yafe) {{m}}, יפה (yafa) {{f}}
@@ -73,7 +73,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 *Kurdish: {{KUchar|[[جوان]]}}, {{KUchar|[[ئێسک سووک]]}}
 *Latin: [[pulcher]], [[formosus]] {{m}}, [[bellus]] {{m}}
 *[[Novial]]: [[beli]]
-*Old Norse: [[fagr]]
+*[[Old Norse]]: [[fagr]]
 *Persian: {{FAchar|[[زیبا]]}} (ziba)
 *Polish: [[piękny]]
 *Portuguese: [[belo]] {{m}}, [[bela]] {{f}}, [[bonito]] {{m}}, [[bonita]] {{f}}
