--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -39,7 +39,7 @@
 *{{ttbc|Greek}}: [[κόστος]] [ˈko̞sto̞s] ''n'', [[έξοδο]] [ˈe̞k͡so̞ˌðo̞] ''n'', [[δαπάνη]] [ðaˈpani] ''f'', [[τίμημα]] [ˈtimiˌma] ''n'', [[αντίτιμο]] [aˈ(n)ditiˌmo̞] ''n''
 *{{ttbc|Indonesian}}: [[biaya]], [[ongkos]]
 *{{ttbc|Japanese}}: [[費用]] ([[ひよう]], hiyō)
-*{{ttbc|Portuguese}}: [[custo]]
+*{{ttbc|Portuguese}}: [[Custo]]
 
 ===Verb===
 {{en-verb|costs|costing|cost}}
