--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -13,7 +13,7 @@
 From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate with Dutch ''[[vechten]]'', German ''[[fechten]]''.
 
 ====Verb====
-{{en-verb|fights|fighting|fought|'''[[fought]]''' ''or (archaic)'' '''[[foughten]]'''}}
+{{en-verb|fights|fighting|fought|'''[[fought]]''' ''or'' '''[[foughten]]'''}}
 
 # {{intransitive}} To [[contend]] in physical conflict, either singly or in war, battle etc.
 #* ''The two boxers have been '''fighting''' for more than half an hour.''
