--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -16,7 +16,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 *[[fine]]d
 
 ===Verb===
-{{en-verb|finds|finding|found}}[[Category:English irregular verbs]]
+{{en-verb|finds|finding|found|'''[[found]]''' or archaic '''[[founden]]'''}}[[Category:English irregular verbs]]
 
 # {{transitive}} To [[encounter]], to [[discover]].
 #: ''Project Gutenberg finds that Find is the 190th most important word in the English language.
