--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -43,7 +43,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 {{trans-bottom}}
 
 ====Verb====
-{{en-verb|pen|n|ing}}
+{{en-verb|pens|penning|'''[[penned]]''' or '''[[pent]]'''}}
 
 # {{transitive}} To [[enclose]] in a pen.
 
