--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -181,12 +181,14 @@ Only colloquial expressions here! For normal language terms, see [[circumcised]]
 {{trans-top|to perform an incision}}
 *Danish: [[skære]], [[snitte]]
 *Finnish: [[leikata]]
+*Spanish: [[cortar]]
 *Swedish: [[skära]]
 {{trans-bottom}}
 
 {{trans-top|to divide with a sharp instrument}}
 *Danish: [[udskære]]
 *Finnish: [[leikata]]
+*Spanish: [[cortar]]
 *Swedish: [[skära]] (''with knife''), [[klippa]] (''with scissors'')
 {{trans-bottom}}
 
@@ -203,6 +205,7 @@ Only colloquial expressions here! For normal language terms, see [[circumcised]]
 {{trans-bottom}}
 
 {{trans-top|to cease recording}}
+*Spanish: [[cortar]]
 *Swedish: [[klippa]]
 {{trans-bottom}}
 
@@ -229,6 +232,7 @@ Only colloquial expressions here! For normal language terms, see [[circumcised]]
 <!-- Only colloquial expressions here, please!  -->
 *Danish: [[pjække]] fra
 *Finnish: [[lintsata]]
+*Spanish: [[faltar]]
 {{trans-bottom}}
 
 {{trans-top|to change direction suddenly}}
@@ -255,7 +259,6 @@ Only colloquial expressions here! For normal language terms, see [[circumcised]]
 *{{ttbc|Portuguese}}: cortar
 *{{ttbc|Romanian}}: [[tăia]], [[croi]]
 *{{ttbc|Serbian}}: [[iseći]] (1,2,3,7,8), [[rez]] (5), [[spustiti]] (6), [[sniziti]] (6), [[pobeći]] (10)
-*{{ttbc|Spanish}}: [[cortar]]
 *{{ttbc|Telugu}}: [[కోయు]] (kOyu) (1,2), [[తెంచు]] (teMchu)(3), [[కోత వేయు]] (kOta vEyu) (6), [[ఖండించుకొను]] (khaMDiMchukonu) (8)
 {{trans-bottom}}
 
