--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -23,12 +23,14 @@
 *Italian: [[costo]] {{m}}, [[spesa]] {{f}}
 *Kurdish: {{KUchar|[[به‌ها]]}}
 *Portuguese: [[custo]] {{m}}
+*Spanish: [[costo]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|negative consequence or loss (2)}}
 *Finnish: [[hinta]]
 {{trans-mid}}
 *German: [[Verlust]] {{m}}
+*Spanish: [[costo]] {{m}}
 {{trans-bottom}}
 
 =====Translations to be checked=====
@@ -57,6 +59,7 @@
 {{trans-mid}}
 *Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
 *Japanese: [[費やす]] ([[ついやす]], tsuiyasu)
+*Spanish: [[costar]] 
 {{trans-bottom}}
 
 [[Category:English irregular verbs]]
