--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -71,6 +71,7 @@
 *Italian: [[tirare]] [[:it:tirare|(it)]]
 {{trans-mid}}
 *Korean: [[끌다]] (kkeulda)
+*Kurdish: {{KUchar|[[ڕاکێشه‌]]}}
 *Polish: [[ciągnąć]], [[pociągnąć]]
 *Swahili: [[kuvuta]]
 *Swedish: [[dra]]
