--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -156,6 +156,7 @@
 ====Translations====
 {{trans-top|act of pulling}}
 {{trans-mid}}
+*Kurdish: {{KUchar|[[ڕاکێشان]]}}
 *Swedish: [[ryck]] {{n}}
 {{trans-bottom}}
 
