--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -32,7 +32,7 @@
 *Finnish: [[maha]], [[vatsa]]
 *French: [[estomac]] {{m}}
 *[[Frisian]]: [[mage]]
-*German: [[Magen]] {{m}}
+*German: {{t|de|Magen}} {{m}}
 *Greek: [[στομάχι]] (stomáçi) {{n}}, [[στόμαχος]] (stómakhos) {{m}}, [[γαστήρ]] (ɣastír) {{m}}
 *Hebrew: [[קיבה]] {{f}}
 *Hindi: [[अमाशय]] {{m}}
@@ -45,9 +45,10 @@
 *Kazakh: [[асқазан]] (asqazan)
 *Korean: [[위]] (wi)
 *Latin: [[stomachus]] {{m}}
+*Lower Sorbian: [[žołdk]] {{m}}
 *Maltese: [[stonku]] {{m}}
 *Old English: [[maga#Old English|maga]] {{m}}
-*Polish: [[żołądek]] {{m}}
+*Polish: {{t|pl|żołądek}} {{m}}
 *Portuguese: [[estômago]] {{m}}
 *Russian: [[желудок]] (želúdok) {{m}}
 *Spanish: [[estómago]] {{m}}
@@ -55,6 +56,7 @@
 *[[Tagalog]]: [[tiyan]]
 *[[Telugu]]: [[పొట్ట]] (poTTa), [[కడుపు]] (kaDupu)
 *Turkish: [[mide]]
+*Upper Sorbian: [[žołdk]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|belly}}
