--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -167,6 +167,7 @@
 *Polish: [[śliwka]] {{f}}
 *Portuguese: [[ameixa]] {{f}}
 *Russian: [[слива]](sliva) {{f}}
+*Scots: [[ploum]]
 *Serbian:
 *:Cyrillic: [[шљива#Serbian|шљива]] {{f}}
 *:Latin: [[šljiva#Serbian|šljiva]] {{f}}
