-(''tree''): +{{i-c|tree}} <plum#2885078>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -26,7 +26,7 @@
 # The tree which bears this fruit, ''Prunus mume''.  See ''[[plum blossom]]''.
 
 ====Synonyms====
-*(''tree''): [[plum tree]]
+*{{i-c|tree}} [[plum tree]]
 *(''edible fleshy stone of'' Prunus mume): [[ume]]
 
 ====Derived terms====
