--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -34,7 +34,7 @@ Old English ''[[sūcan]]''
 *Hindi: [[चूसना]] (ćūsnā)
 *German: [[saugen]]
 *Korean: [[빨다]] (ppalda)
-*[[Kurdish]]: [[mêjîn]], [[mêtin]]
+*[[Kurdish]]: [[mêjîn]], [[mêtin]], {{KUchar|[[مژین]]}}
 *Italian: [[succhiare]], [[suggere]]
 {{trans-mid}}
 *Latin: [[fellare]]
