--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -59,6 +59,7 @@
 *German: [[drücken]], [[schieben]], [[stoßen]]
 *Italian: [[spingere]]
 *Ido: Pulsar
+*Kurdish: {{KUchar|[[پاڵ دان]]}}
 *Latin: [[pellere]]
 *Old English: [[scufan|scūfan]]
 {{trans-mid}}
@@ -74,10 +75,12 @@
 {{trans-top|continually attempt to persuade (a person)}}
 *German: [[drängen]]
 {{trans-mid}}
+*Kurdish: {{KUchar|[[پاڵ پێوه‌نان]]}}
 {{trans-bottom}}
 
 {{trans-top|continually attempt to promote (a point of view)}}
 {{trans-mid}}
+*Kurdish: {{KUchar|[[پاڵ پێوه‌نان]]}}
 {{trans-bottom}}
 
 {{trans-top|promote (a product)}}
@@ -89,6 +92,7 @@
 *German: [[drücken]], [[schieben]], [[stoßen]]
 *Italian: [[spingere]]
 {{trans-mid}}
+*Kurdish: {{KUchar|[[پاڵ نان]]}}
 {{trans-bottom}}
 
 {{trans-top|intransitive: tense the muscles of the abdomen}}
