--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -3,7 +3,7 @@
 {{rank|England|sense|ten|422|beautiful|possible|mark|followed}}
 
 ===Etymology===
-From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
+*From [[beauty]] and Germanic ''[[-ful]]'', "full of".
 
 ===Pronunciation===
 *{{AHD|byo͞oʹtĭ-fəl}}, {{IPA|/ˈbjuːtɪfəl/}}, {{SAMPA|/"bju:tIf@l/}}
