--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -95,6 +95,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 *Italian: [[penna#Italian|penna]] {{f}}
 *Japanese: [[ペン]] (pen)
 {{trans-mid}}
+*Kurdish: {{KUchar|[[پێنووس]]}}
 *Norwegian: [[penn]] {{m}}
 *Persian: {{FAchar|[[قلم]]}} (ghalam)
 *Polish: [[pióro]] {{n}}, [[długopis]] {{m}}
