--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -45,6 +45,7 @@
 *Icelandic: [[beinn]]
 {{trans-mid}}
 *Irish: [[díreach]]
+*Kurdish: {{KUchar|[[ڕێک]]}}
 *Polish: [[prosty]]
 *Portuguese: [[reto]] {{m}}
 *Russian: [[прямой]] (pr'amój)
