--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -39,7 +39,7 @@
 
 ==Swedish==
 ===Noun===
-{{sv-noun|gender=Common|lie|lien|liar|liarna|lies|liens|liars|liernas}}
+{{sv-noun|gender=Common|lie|lien|liar|liarna|lies|liens|liars|liarnas}}
 '''lies'''
 # [[genitive|Genitive]] [[singular]] [[indefinite]] of [[lie#Swedish|lie]].
 
