--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -35,6 +35,7 @@ See [[WikiSaurus:vomit]]
 *Portuguese: [[vomitar]]
 *Romanian: a [[vomita]]
 *Russian: [[блевать]], [[рвать]]
+*Serbian: [[zbljuvati]], povratiti]], [[bljuvati]], [[povraćati]]
 *Spanish: [[vomitar]], [[devolver]]
 *Swedish: [[kräkas]], [[spy]]
 {{bottom}}
