--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -62,6 +62,7 @@ See [[WikiSaurus:vomit]].
 *Polish: [[wymiociony]] {{f}}
 *Portuguese: [[vômito]] {{m}}
 *Russian: [[блевотина]] {{f}}, [[рвота]] {{f}}
+*Serbian: [[bljuvotina]] {{f}}, [[povraćaj]] {{m}}, [[izbljuvak]] {{m}}
 *Spanish: [[vómito]] {{m}}
 *Telugu: [[వాంతి]] (vaamthi)
 *Urdu: [[الٹى]]
