format tidy up <caught#2945032>

--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -3,22 +3,22 @@
 {{rank|struck|man's|write|651|caught|below|window|instead}}
 
 ===Pronunciation===
-* {{IPA|/'kɔφt/}}, {{IPAchar|/kɔːt/}}
-* {{audio|en-us-caught.ogg|Audio (US)}}
-* {{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
-* {{audio|en-au-caught.ogg|Audio (Australia)}}
-* {{audio|en-uk-caught.ogg|Audio (UK)}}
-* Rhymes: [[Rhymes:English:-ɔːt|-ɔːt]]
+*{{IPA|/'kɔφt/}}, {{IPAchar|/kɔːt/}}
+*{{audio|en-us-caught.ogg|Audio (US)}}
+*{{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
+*{{audio|en-au-caught.ogg|Audio (Australia)}}
+*{{audio|en-uk-caught.ogg|Audio (UK)}}
+*:{{rhymes|ɔːt}}
 
 ===Adjective===
-'''caught'''
+{{en-adj|-}}
 
-# {{Cricket}} Of the [[method]] of being [[out]] in which the [[striker]] hits the ball and a [[fielder]] catches it.
+# {{cricket}} Of the [[method]] of being [[out]] in which the [[striker]] hits the ball and a [[fielder]] catches it.
 
 ===Verb===
 '''caught'''
 
-# {{past of|''[[catch]]''}}
+# {{past of|[[catch]]}}
 
 ====Derived terms====
 *[[caught red-handed]]
