--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -1,1 +1,50 @@
-spelt, Triticum spelta, Triticum aestivum spelta (hardy wheat grown mostly in Europe for livestock feed
+==English==
+
+===Etymology 1===
+''Chiefly British'', through ''French'' "Espeller" and dialect nuance.
+
+====Alternative spellings====
+*[[spelled]]
+
+====Pronunciation====
+*{{IPA|/'spεlt/}}
+*:Rhymes: [[Rhymes:English:-ɛlt|-ɛlt]]
+
+====Verb====
+'''spelt'''
+
+# {{past of|[[spell]]}}
+
+=====Quotations=====
+*'''1590''' — [[w:William Shakespeare|William Shakespeare]], ''[[s:Love's Labour's Lost|Love's Labour's Lost]], v 1''
+*:Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt'''<br/>backward with the horn on his head?
+
+===Etymology 2===
+====Pronunciation====
+*{{IPA|/'spεlt/}}
+*:Rhymes: [[Rhymes:English:-ɛlt|-ɛlt]]
+
+====Noun====
+{{en-noun|-}}
+
+# A type of [[wheat]], ''Triticum aestivum spelta''
+
+=====Translations=====
+{{top}}
+*Dutch: [[spelt]]
+*German: [[Dinkel]] {{m}}
+{{mid}}
+*{{ttbc|Hungarian}}: [[tönköly]] [[búza]]
+{{bottom}}
+
+----
+
+==Dutch==
+
+===Noun===
+'''spelt''' {{n}}
+
+# Kind of [[cereal]]
+
+[[io:spelt]]
+[[nl:spelt]]
