--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -12,7 +12,7 @@
 
 # A hardened block of [[mud]], [[clay]], etc, used for building.
 #:''This house is made of '''bricks'''''.
-#{{uncountable}} Considered collectively, as a building material.
+# {{uncountable}} Considered collectively, as a building material.
 #:''This house is made of '''brick'''''.
 # {{basketball}} A shot which misses, particularly one which bounces directly out of the basket.
 #: ''We can't win if we keep throwing up '''bricks''' from three-point land.''
@@ -44,7 +44,7 @@
 *Polish: [[cegła]]
 *Portuguese: [[tijolo]]
 *Russian: [[кирпич]] (kirpíč) {{m}}
-*Scottish Gaelic: [[breig]]
+*[[Scottish Gaelic]]: [[breig]]
 *Serbian: [[опека]]
 *Serbo-Croatian: [[cigla]]
 *Slovak: [[tehla]]
@@ -101,7 +101,7 @@
 * [[drop a brick]]
 * [[hit the bricks]]
 * [[like a cat on a hot brick]]
-* [[like a ton of bricks]] 
+* [[like a ton of bricks]]
 * [[make bricks without straw]]
 * [[make bricks without straws]]
 * [[run into a brick wall]]
