--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -75,6 +75,7 @@
 {{trans-bottom}}
 
 {{trans-top|grow across a surface rather than upwards}}
+*Danish: [[krybe]]
 *Dutch: [[kruipen]]
 *German: [[kriechen]]
 {{trans-mid}}
@@ -83,6 +84,7 @@
 {{trans-bottom}}
 
 {{trans-top|move slowly and quietly in a particular direction}}
+*Danish: [[krybe]]
 *Dutch: [[kruipen]]
 *Finnish: [[hiipiä]]
 *German: [[schleichen]]
