--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -28,28 +28,27 @@ From Old English [[ceosan|ċēosan]].
 *[[chosen]]
 
 ====Translations====
-'''to elect''' (1)
-{{top}}
-*[[Catalan]]: [[escollir]], [[elegir]], [[triar]]
+{{trans-top|to elect}}
+*Catalan: [[escollir]], [[elegir]], [[triar]]
 *Danish: [[vælge]], [[kåre]]
 *Dutch: [[kiezen]], [[verkiezen]]
 *Finnish: [[valita]]
 *French: [[choisir]]
 *German: [[wählen]]
 *Greek: {{t-|el|εκλέγω||}} (eklégo)
-{{mid}}
+{{trans-mid}}
 *Italian: [[eleggere]]
 *Polish: [[wybierać]], [[wybrać]]
 *Portuguese: [[escolher]]
+*Romanian: [[alege]]
 *Slovene: [[izvoliti]]
 *Spanish: [[elegir]]
 *Swedish: [[välja]]
 *[[Tagalog]]: [[pili]]
-{{bottom}}
+{{trans-bottom}}
 
-'''to pick''' (2)
-{{top}}
-*[[Catalan]]: [[elegir]]
+{{trans-top|to pick}}
+*Catalan: [[elegir]]
 *Danish: [[udvælge]], [[vælge]], [[foretrække]]
 *Dutch: [[kiezen]], [[uitkiezen]]
 *Finnish: [[valita]]
@@ -57,28 +56,29 @@ From Old English [[ceosan|ċēosan]].
 *German: [[auswählen]], [[wählen]]
 *Greek: {{t-|el|διαλέγω||}} (dialégo)
 *Hebrew: [[לבחור]] (livkhor)
-{{mid}}
+{{trans-mid}}
 *Italian: [[scegliere]], [[selezionare]]
 *Maori: [[whiri]]
 *Portuguese: [[escolher]]
+*Romanian: [[alege]]
 *Slovene: [[izbrati]]
 *Spanish: [[escoger]]
 *Swedish: [[välja]]
 *[[Tagalog]]: [[pili]]
-{{bottom}}
+{{trans-bottom}}
 
 '''decide to act in a certain way''' (3)
-{{top}}
+{{trans-top|to decide to act in a certain way}}
 *Danish: [[foretrække]], [[have lyst]], [[finde for godt]]
 *Dutch: [[kiezen]]
 *Finnish: [[päättää]] [[tehdä]]
-{{mid}}
+{{trans-mid}}
 *Portuguese: [[escolher]]
-{{bottom}}
+*Romanian: [[vrea]], [[prefera]]
+{{trans-bottom}}
 
 =====Translations to be checked=====
 {{checktrans}}
-
 *{{ttbc|Albanian}}: [[zgjedh]]
 *{{ttbc|Chinese}}: [[選擇]]
 *{{ttbc|Croatian}}: [[izabrati]], [[izabirati]]
