trans link [[Catalan]] <choose#2962811>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -29,7 +29,7 @@ From Old English [[ceosan|ċēosan]].
 
 ====Translations====
 {{trans-top|to elect}}
-*Catalan: [[escollir]], [[elegir]], [[triar]]
+*[[Catalan]]: [[escollir]], [[elegir]], [[triar]]
 *Danish: [[vælge]], [[kåre]]
 *Dutch: [[kiezen]], [[verkiezen]]
 *Finnish: [[valita]]
@@ -48,7 +48,7 @@ From Old English [[ceosan|ċēosan]].
 {{trans-bottom}}
 
 {{trans-top|to pick}}
-*Catalan: [[elegir]]
+*[[Catalan]]: [[elegir]]
 *Danish: [[udvælge]], [[vælge]], [[foretrække]]
 *Dutch: [[kiezen]], [[uitkiezen]]
 *Finnish: [[valita]]
