--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -10,7 +10,7 @@ In the English language, it is only one a few distinct words where the gender di
 *[[blond]] (UK)
 
 ===Noun===
-'''blonde'''  (''plural:'' '''[[blondes]]''')
+{{en-noun}}
 
 # A person (usually a woman) of [[fair]] skin and hair.
 # The hair color that appears [[yellow]], [[golden]], or lighter.
@@ -18,11 +18,12 @@ In the English language, it is only one a few distinct words where the gender di
 #:<table><tr><td>blonde color: &nbsp;</td><td bgcolor="#F8E8A7" width="80">&nbsp; </td></tr></table>
 
 ===Adjective===
-'''blonde'''
+{{en-adj|blonder|blondest|more}}
 
 # Of a blonde complexion (referring to a person.)
-# Having a blonde or gold appearance (e.g. Blonde Ale/Beer.)
-# (color) Of a light [[yellow]]ish [[brown]] color.
+# Having a blonde or gold appearance
+#: '''''blonde''' ale''; '''''blonde''' beer''
+# {{color}} Of a light [[yellow]]ish [[brown]] color.
 
 ===Derived terms===
 *[[ash blonde]]
@@ -50,8 +51,8 @@ flexed form of [[blond]]
 ==French==
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /blɔ̃d/
-*[[w:SAMPA|SAMPA]]: /blO~d/
+*{{IPA|lang=fr|/blɔ̃d/}}
+*{{SAMPA|lang=fr|/blO~d/}}
 
 ===Adjective===
 '''blonde''' {{f}}
