--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -8,7 +8,7 @@ Pictographic representation of the sun ([[日]]) appearing over the horizon.
 # [[dawn]]
 # [[morning]]
 # [[day]]
-# [[actor]], especially in Chinese Operas.
+# [[actress]] or a female character, especially in Chinese Operas.
 
 ====References====
 {{Han ref|kx=0489.030|dkj=13734|dj=0850.010|hdz=21483.010|uh=65E6|ud=26086|bh=A5B9|bd=42425}}
