--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -16,7 +16,7 @@
 *Arabic: {{ARchar|[[الولايات المتحدة الامريكية]]}} (al-wilayāt al-muttáħedat al-’amrikíyya), {{ARchar|[[الولايات المتحدة]]}} (al-wilayāt al-muttáħeda) {{fpl}}
 *Armenian: [[Ամերիկայի Միացյալ Նահանգներ]] (Amērikayi Miats‘yal Nahangnēr)
 *[[Azeri]]: [[Amerika Birləşmiş Ştatları]]
-*[[Bengali]]: {{BNchar|[[মার্কিন যুক্তরাষ্ট্র]]}}
+*Bengali: {{BNchar|[[মার্কিন যুক্তরাষ্ট্র]]}}
 *Bosnian: [[Sjedinjene Američke Države]] {{fpl}}, [[Amerika]] {{f}}, [[SAD]]
 *[[Breton]]: [[Stadoù-Unanet Amerika]] {{fpl}}, [[SUA]]
 *Bulgarian: [[Съединени Американски Щати]] (Sǎedineni amerikanski štati), [[САЩ]]
@@ -35,7 +35,7 @@
 *German: [[Vereinigte Staaten von Amerika]] {{mpl}}, (''short form'') [[Vereinigte Staaten]] {{mpl}}, [[USA]] {{mpl}} or {{f}} ''singular''
 *Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] {{fpl}}, [[Ηνωμένες Πολιτείες Αμερικής]] {{fpl}}, (''short form'') [[Ηνωμένες Πολιτείες]] {{fpl}}, [[ΗΠΑ]]
 *[[Gujarati]]: [[સંયુકત રાજ્ય અમેરિકા]]
-*[[Hawaiian]]: [['Amelika Huipū'ia]]
+*Hawaiian: [['Amelika Huipū'ia]]
 *Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel Amerika), ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה״ב]] (ARH-B)
 *Hindi: [[संयुक्त राज्य अमरीका]] (Sa.nyukta Rājya Amrīkā), [[संयुक्त राष्ट्र अमरीका]] (Sa.nyukta Raštra Amrīkā)
 *Hungarian: [[Amerikai Egyesült Államok]]
@@ -53,7 +53,7 @@
 *Latvian: [[Amerikas Savienotās Valstis]], [[ASV]]
 *Malay: [[Amerika Syarikat]]
 *Maltese: [[Stati Uniti ta' l-Amerika]], [[l-Istati Uniti ta' l-Amerika]], (''short form'') [[Stati Uniti]], [[l-Istati Uniti]], [[USA]]
-*[[Navajo]]: [[Wááshindoon bikéyah ałhidadiidzooígíí]]
+*Navajo: [[Wááshindoon bikéyah ałhidadiidzooígíí]]
 *Nepali: [[संयुक्त राज्य अमेरिका]] (Sa.nyukta Rājya Amerīkā)
 *Norwegian: [[Amerikas forente stater]], [[De forente stater]]
 *Persian: {{FAchar|[[ایالات متحده آمریکا|ایالات متحدهٔ آمریکا]]}} (ayâlât-e motahideh âmrika)
@@ -76,7 +76,7 @@
 *Turkish: [[Amerika Birleşik Devletleri]], [[ABD]]
 *Ukrainian: [[Сполучені Штати Америки]] (Spolučeni Štáti Amériki) {{mpl}}, [[США#Ukrainian|США]]
 *[[Uyghur]]: {{FAchar|[[ﺋﺎﻣﯧﺮﯨﻜﺎ ﻗﻮﺷﻤﺎ ﺷﺘﺎﺗﻠﯩﺮﻯ]]}} (’amerika quşma ştatleri)
-*[[Uzbek]]: [[Amerika Qo'shma Shtatlari]]
+*Uzbek: [[Amerika Qo'shma Shtatlari]]
 *Vietnamese: [[Hoa Kỳ]], [[Nước Mỹ]], [[Mỹ Quốc]] (''short forms''); [[Hợp Chủng Quốc Hoa Kỳ]] (''long form''); [[HK#Vietnamese|HK]] (''abbr.''), [[Mỹ]] (''abbr.'')
 *Võro: [[Ameeriga Ütisriigiq]]
 *Yiddish: ''short form'': [[פֿאַראייניקטע שטאַטן]] (Fareynikte Shtatn)
