/* Translations */ ko. <fight#2985754>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -45,6 +45,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 *German: [[kämpfen]], [[fechten]], [[streiten]] (archaic)
 *Hebrew: {{he-translation|לריב|larív}}, {{he-translation|להיאבק|lehe`avék}}, {{he-translation|להילחם|lehilakhém}}
 {{trans-mid}}
+*Korean: [[싸우다]] (ssauda)
 *Icelandic: [[slást]], [[berjast]]
 *Italian: [[azzuffarsi]], [[battersi]]
 *Latin: [[pugnare]]
@@ -83,6 +84,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 {{trans-mid}}
 *Icelandic: [[berjast]] [[við]]
 *Italian: [[combattere]]
+*Korean: [[싸우다]] (ssauda)
 *Portuguese: [[lutar]] com/contra, [[combater]]
 *[[Scottish Gaelic]]: [[cog]], [[sabaid]]
 {{trans-bottom}}
