--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -14,10 +14,10 @@
 {{en-adj}}
 
 # possessing charm and attractive
+#:''Rachel Boxer is very beautiful!''
 # {{context|of the weather}} pleasant; clear.
 # well executed
 #:''The skater performed a beautiful [[axel]].''
-#:''I think Rachel Boxer is beautiful!''
 # <!--not an interjection-->(''as a [[pro-sentence]]'') How beautiful that is!
 #:''Beautiful! What a catch!'' (referring to an athlete catching a ball)
 # <!--not an interjection-->(''as a pro-sentence; ironic'') How unfortunate that is!
