--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -49,6 +49,7 @@
 *Serbian: [[опека]]
 *Serbo-Croatian: [[cigla]]
 *Slovak: [[tehla]]
+*Slovene: [[opeka]] {{f}}, [[zidak]] {{m}}
 *Spanish: [[ladrillo]]
 *Swedish: [[tegel]] {{n}}, [[tegelsten]]
 *[[Tamil]]: [[செங்கல்]]
@@ -61,6 +62,7 @@
 *Finnish: [[tiili]]
 *Icelandic: [[múrsteinn]] {{m}}, [[byggingarklossar]] {{mpl}}, [[byggingarkubbar]] {{npl}}
 {{trans-mid}}
+*Slovene: [[opeka]]
 *Swedish: [[tegel]] {{n}}
 {{trans-bottom}}
 
@@ -90,7 +92,6 @@
 *{{ttbc|Latvian}}: [[ķieģelis]] {{m}} (1,2)
 *{{ttbc|Portuguese}}: [[tijolo]]
 *{{ttbc|Romanian}}: [[cărămidă]] {{f}}
-*{{ttbc|Slovene}}: [[opeka]] {{f}} (1,2)
 *{{ttbc|Spanish}}: [[ladrillo]] {{m}}
 *{{ttbc|Swahili}}: [[tofali]], [[matofali]] {{p}} (1,2) ''(noun 5/6)''
 *{{ttbc|Telugu}}: [[ఇటుక]] (1, 2)
