--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -154,7 +154,9 @@ Only colloquial expressions here! For normal language terms, see [[circumcised]]
 # {{cricket}} To make the ball spin sideways by running one's [[finger]]s down the side of the ball while bowling it.
 # {{colloquial}} Not to [[attend]] a [[class]], ''especially'' when this is not [[permit]]ted.
 #:''I '''cut''' fifth period to hang out with Angela.''
-# To change direction suddenly; to make a sudden [[sprint]] in order to [[evade]] the [[defense]].
+# To change direction suddenly.
+#:''The [[football]] player '''cut''' to his left to evade a [[tackle]].''
+
 
 ====Related terms====
 {{rel-top3|related terms}}
