/* Adjective */  Added reduced. <cut#2999571>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -17,6 +17,8 @@
 # {{colloquial}} [[circumcised|Circumcised]].
 # {{cricket|of a shot}} Played with a [[horizontal]] [[bat]] to hit the ball backward of point.
 # {{bodybuilding}} Having muscular [[definition]] in which individual groups of [[muscle]] fibers stand out among larger muscles.
+# Reduced.
+#:''The [[pitcher]] threw a '''cut''' [[fastball]] that was slower than his usual [[pitch]].
 
 ====Translations====
 {{trans-top|having been cut}}
